--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,11 +1,12 @@
-.header{
-  color: black;
+.footer {
   padding: 1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.header h1 {
-  margin: 0;
+.footer a {
+  margin: 0 1rem ;
+  text-decoration: none;
+  color: black;
 }
