--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -1,1 +1,3 @@
-<app-tasks-item *ngFor="let task of tasks" [task]="task"></app-tasks-item>
+  <app-add-task (onAddTask)="addTask($event)"></app-add-task>
+  <app-tasks-item *ngFor="let task of tasks, index as i" [ngStyle]="{'--squircle-fill': 'color-'+i}" [task]="task" (onDeleteTask)="deleteTask(task)"
+  (onToggleReminder)="toggleReminder(task)"></app-tasks-item>
