--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
 
+:root{
+  --color-1: #885fec;
+  --color-2: #f0b772;
+  --color-3: #f895ce;
+  --color-4: #95e4f8;
+  --white: #f7f7f7;
+}
+
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
   padding: 0;
+}
+
+.squircle {
+  filter: drop-shadow(20px 38px 34px rgba(0, 0, 0, 0.25));
+  background: paint(squircle);
+  --squircle-radius: 60px;
+  --squircle-smooth: 0.6;
 }
